[project]
name = "sitemap2atom"
version = "0.1.0"
description = "A tool to convert XML sitemaps to Atom feeds"
authors = ["Mike <darkflib@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.25.1",
    "lxml>=4.6.3",
    "beautifulsoup4>=4.9.3",
    "feedgen>=0.9.0",
    "python-dateutil>=2.8.1",
    "click>=7.1.2",
    "pytz>=2021.1",
    "rich>=10.0.0",
]

[project.urls]
homepage = "https://github.com/darkflib/sitemap2atom"
repository = "https://github.com/darkflib/sitemap2atom"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=6.2.4",
    "black>=21.7b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "pre-commit>=2.13.0",
    "coverage>=5.5",
    "types-requests>=2.25.1",
    "types-lxml>=4.6.3",
    "types-beautifulsoup4>=4.9.3",
    "types-python-dateutil>=2.8.1",
    "types-rich>=10.0.0",
    "types-click>=7.1.2",
    "types-pytz>=2021.1",
    "types-feedgen>=0.9.0"
]


